# rules_formatjs

./: .bazelignore  .bazelrc  .gitattributes  AGENTS.md  BUILD.bazel  BUILD.dev.bazel  CONTRIBUTING.md  MODULE.bazel  README.md  REPO.bazel  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json  test-all.sh
.bcr/: metadata.template.json
.github/workflows/: buildifier.yaml  ci.yaml  publish.yaml  release.yaml  release_prep.sh  verify-hooks.yml
cli/: BUILD.bazel
docs/: releasing.md
e2e/: REPO.bazel
e2e/smoke/: .bazelrc  BUILD  BUILD.bazel  MODULE.bazel  README.md  REPO.bazel  WORKSPACE.bazel
e2e/smoke/src/: Hello.tsx
examples/aggregate/: BUILD.bazel  MODULE.bazel  REPO.bazel
examples/aggregate/app/: App.tsx  BUILD.bazel  all_messages.fixture.json  transitive_messages.fixture.json
examples/aggregate/module1/: BUILD.bazel  Messages.tsx
examples/aggregate/module2/: BUILD.bazel  Messages.tsx
examples/aggregate/module3/: BUILD.bazel  Messages.tsx
examples/custom_version/: BUILD.bazel  MODULE.bazel  README.md  test_cli_version.sh  test_extraction.sh
examples/simple/: BUILD.bazel  MODULE.bazel  REPO.bazel  compile_messages.fixture.json  extract_messages.fixture.json
examples/simple/messages/: fr.json
examples/simple/src/: App.tsx
examples/simple/tests_verify/: BUILD.bazel  README.md
formatjs/: aggregate.bzl  compile.bzl  extract.bzl  verify.bzl
formatjs_cli/: BUILD.bazel  extensions.bzl  repositories.bzl  toolchain.bzl
tests/arguments/: BUILD.bazel  test.tsx  test_empty.tsx  test_merge.tsx
tests/arguments/fixtures/: compiled_ast.json  compiled_multiple.json  messages_crowdin.json  messages_default.json  messages_merge.json
tests/cli/: BUILD.bazel  cli_test.bzl
tools/: preset.bazelrc
