"""File declaring metadata applying to all packages and targets in the Bazel module."""

repo(
    default_package_metadata = [
        "//:package_metadata",
    ],
)

ignore_directories([
    # Examples are separate workspaces
    "examples",
    # Bazel convenience symlinks
    "bazel-bin",
    "bazel-out",
    "bazel-rules_formatjs",
    "bazel-testlogs",
])
