# Toolchain type for FormatJS CLI
toolchain_type(
    name = "toolchain_type",
    visibility = ["//visibility:public"],
)

config_setting(
    name = "darwin_arm64",
    constraint_values = [
        "@platforms//os:osx",
        "@platforms//cpu:arm64",
    ],
)

config_setting(
    name = "linux_aarch64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:aarch64",
    ],
)

config_setting(
    name = "linux_x64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
)

config_setting(
    name = "windows_x86_64",
    constraint_values = [
        "@platforms//os:windows",
        "@platforms//cpu:x86_64",
    ],
)

# Alias that resolves to the correct toolchain CLI based on platform
# This is used by verify.bzl which can't use toolchains directly
alias(
    name = "cli",
    actual = select(
        {
            ":darwin_arm64": "@formatjs_cli_toolchains_darwin_arm64//:cli",
            ":linux_aarch64": "@formatjs_cli_toolchains_linux_aarch64//:cli",
            ":linux_x64": "@formatjs_cli_toolchains_linux_x64//:cli",
            ":windows_x86_64": "@formatjs_cli_toolchains_windows_x86_64//:cli",
        },
        no_match_error = "No FormatJS CLI binary is available for this target platform.",
    ),
    visibility = ["//visibility:public"],
)
