load(":toolchain.bzl", "formatjs_cli_executable")

# Toolchain type for FormatJS CLI
toolchain_type(
    name = "toolchain_type",
    visibility = ["//visibility:public"],
)

# Executable that resolves the CLI through the registered toolchain.
formatjs_cli_executable(
    name = "cli",
    visibility = ["//visibility:public"],
)
