"""Application that aggregates messages from all modules"""

load("@aspect_bazel_lib//lib:write_source_files.bzl", "write_source_files")
load("@rules_formatjs//formatjs:defs.bzl", "formatjs_aggregate")

# Aggregate messages from module2 and module3
# Module3 depends on module1, so module1's messages should be included transitively
# This demonstrates that the aspect properly traverses the dependency graph
formatjs_aggregate(
    name = "all_messages",
    deps = [
        "//module2:messages",
        "//module3:messages",
    ],
)

# Aggregate messages from module2 and module3
# Module3 depends on module1, so module1's messages should be included transitively
# This demonstrates that the aspect properly traverses the dependency graph
formatjs_aggregate(
    name = "transitive_messages",
    out = "transitive_messages.json",
    deps = [
        "//module2:messages",
        "//module3:messages",
    ],
)

# Test target - verifies the snapshot hasn't changed
write_source_files(
    name = "aggregation_test",
    files = {
        "all_messages.fixture.json": ":all_messages",
        "transitive_messages.fixture.json": ":transitive_messages.json",
    },
)
